fixed mobile sizing for navbar header so that text no longer wraps

--- a/client/public/portfolio.css
+++ b/client/public/portfolio.css
@@ -635,4 +635,7 @@ footer .footer-below {
 	.navbarMenu {
     float: left;
   }
+  a.navbar-brand {
+    font-size: 13px;
+  }
 }
